--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -9,6 +9,9 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Login" icon-off="ion-unlocked" icon-on="ion-unlocked" href="#/tab/login">
    <ion-nav-view name="login"></ion-nav-view>
   </ion-tab>
+  <ion-tab title="Register" hidden="true" href="#/tab/register">
+   <ion-nav-view name="register"></ion-nav-view>
+  </ion-tab>
   <!-- Profile Tab -->
   <ion-tab title="Profile" icon-off="ion-person" icon-on="ion-person" href="#/tab/profile">
     <ion-nav-view name="profile"></ion-nav-view>
