--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -3,16 +3,16 @@
   <br/>
       <div class="list">
         <label class="item item-input">
-          <input type="text" ng-model="username" placeholder="Username" />
+          <input type="text" ng-model="email" placeholder="Email" />
         </label>
         <label class="item item-input">
           <input type="password" ng-model="password" placeholder="Password" />
         </label>
         <label class="item">
-          <button class="button button-block button-positive" ng-click="login(username, password)" type="submit">Log in</button>
+          <button class="button button-block button-positive" ng-click="login(email, password)" type="submit">Log in</button>
         </label>
         <label class="item">
-		  <button class="button button-block button-balanced" ng-click="register(username, password)" type="submit">Register</button>
+		  <button class="button button-block button-balanced" ng-click="register(email, password)" type="submit">Register</button>
         </label>
       </div>
   </ion-content>
