trying to pull info for profile from firebase and check if user is logged in

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<img class="profile-avatar" src="img/blank_avatar_small.png" ></img>
 		<div class="right-box">
-			<p>Jonathan Smith</p>
+			<p ng-model="details.fullName" ng-model-options="{ getterSetter: true }" ></p>
 			<p>Leitrim, Ireland</p>
 			<p>Status: Unemployed</p>
 		</div>
