--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,14 @@
 
 }
 
+.loading-container  .loading  {
+background-color: #f2f2f2;
+opacity: 1.0;
+background-color: rgba(0, 0, 0, 0);
+
+}
+
+
 .user-container{
 Height:82px;
 background-color: #f2f2f2;
