--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -11,9 +11,11 @@
         <label class="item">
           <button class="button button-block button-positive" ng-click="login(email, password)" type="submit">Log in</button>
         </label>
-        <label class="item">
-		  <button class="button button-block button-balanced" ng-click="register(email, password)" type="submit">Register</button>
+		<label class="item">
+		<button class="button button-block button-balanced" nav-direction="forward" ui-sref="tab.register({mail: email, pass: password})" type="submit">Register</button>
         </label>
       </div>
   </ion-content>
 </ion-view>
+
+
