--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -1,7 +1,7 @@
 
 <ion-view view-title="Register">
   <ion-content class="padding">
-  <br/>
+  <img class="logo" src="img/TapReference_logo.png" ></img>
       <div class="list">
       <form name="registerForm" ng-model-options="{ getterSetter: true }">
         <label class="item item-input">
@@ -36,7 +36,7 @@
           <input type="password" ng-model="form.confirmPassword" placeholder="Confirm password" />
         </label>
         <label class="item">
-			<button class="button button-block button-balanced" ng-click="register()" type="submit">Register</button>
+			<submit class="button button-block button-balanced" ng-click="register()" type="submit">Register</submit>
         </label>
       </form>
       </div>
