--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -11,7 +11,7 @@
 				<img class="search-avatar" src="img/blank_avatar_small.png" ></img>
 			</div>
 			<div class="details-box padding-left">
-				<p>John Smith</p>
+				<p>Katherine Dawson</p>
 				<p>Austin Texas</p>
 				<p>Status: Unemployed </p>
 			</div>
@@ -22,7 +22,7 @@
 				<img class="search-avatar" src="img/blank_avatar_small.png" ></img>
 			</div>
 			<div class="details-box padding-left">
-				<p>Johnny Smith</p>
+				<p>Billie Conner</p>
 				<p>London, England</p>
 				<p>Status: Employed - Data Analyst</p>
 			</div>
@@ -33,7 +33,7 @@
 				<img class="search-avatar" src="img/blank_avatar_small.png" ></img>
 			</div>
 			<div class="details-box padding-left">
-				<p>John Smith</p>
+				<p>Clyde Murray</p>
 				<p>Dublin, Ireland</p>
 				<p>Status: Employed - Game Designer</p>
 			</div>
@@ -44,7 +44,7 @@
 				<img class="search-avatar" src="img/blank_avatar_small.png" ></img>
 			</div>
 			<div class="details-box padding-left">
-				<p>John Smith</p>
+				<p>Ira Reid</p>
 				<p>Austin Texas</p>
 				<p>Status: Employed - Barista</p>
 			</div>
@@ -55,7 +55,7 @@
 				<img class="search-avatar" src="img/blank_avatar_small.png" ></img>
 			</div>
 			<div class="details-box padding-left">
-				<p>John Smith</p>
+				<p>Jeremy Valdez</p>
 				<p>Seattle, Washington</p>
 				<p>Status: Employed - Unemployed</p>
 			</div>
@@ -66,7 +66,7 @@
 				<img class="search-avatar" src="img/blank_avatar_small.png" ></img>
 			</div>
 			<div class="details-box padding-left">
-				<p>Jonathan Smith</p>
+				<p>David Wilson</p>
 				<p>Leitrim, Ireland</p>
 				<p>Status: Unemployed</p>
 			</div>
@@ -77,7 +77,7 @@
 				<img class="search-avatar" src="img/blank_avatar_small.png" ></img>
 			</div>
 			<div class="details-box padding-left">
-				<p>Johnny Smith</p>
+				<p>Devin Maxwell</p>
 				<p>Los Angeles, California</p>
 				<p>Status: Employed - Structural Engineer</p>
 			</div>
