--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -9,6 +9,7 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Login" icon-off="ion-unlocked" icon-on="ion-unlocked" href="#/tab/login">
    <ion-nav-view name="login"></ion-nav-view>
   </ion-tab>
+  <!-- Registration Tab -->
   <ion-tab title="Register" hidden="true" href="#/tab/register">
    <ion-nav-view name="register"></ion-nav-view>
   </ion-tab>
