--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -36,7 +36,7 @@
           <input type="password" ng-model="form.confirmPassword" placeholder="Confirm password" />
         </label>
         <label class="item">
-			<submit class="button button-block button-balanced" ng-click="register()" type="submit">Register</submit>
+			<button class="button button-block button-balanced" ng-click="register()" type="submit">Register</button>
         </label>
       </form>
       </div>
