Show/hide tab buttons dynamically

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -5,7 +5,7 @@
 			<img class="profile-avatar" src="img/blank_avatar_small.png" ></img>
 			<div class="right-box">
 				<p>{{ fullName }}</p>
-				<p>Leitrim, Ireland</p>
+				<p ng-class="loggedIn">Leitrim, Ireland</p>
 				<p>Status: Unemployed</p>
 			</div>
 		</div>
