--- a/www/templates/notifications.html
+++ b/www/templates/notifications.html
@@ -3,7 +3,10 @@
       <h1 class="title">Pending Referrals</h1>
     </ion-header-bar>
     <ion-content>
-	<div ng-repeat"(uid, referral) in referrals">
+	<div ng-repeat="(uid, referral) in referrals">
+		<h3>{{ referral['authorName'] }}</h3>
+		<h5>({{ referral['authorEmail'] }}) | {{ referral['timestamp'] | date }}</h5>
+		<h4>{{ referral['referralText'] | limitTo:129 }} </h3>
 	</div ng-repeat>
     </ion-content>
   </ion-popover-view>
