--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -58,7 +58,7 @@
 
 <!---test modal-->
 
-<script id="templates/pendRefModal.html" type="text/ng-template">
+<!-- <script id="templates/pendRefModal.html" type="text/ng-template">
 	<ion-modal-view>
 		<ion-content>
 			<p>{{incomingReferral}}</p>
@@ -71,4 +71,4 @@
 
 		</ion-content>
 	</ion-modal-view>
-</script>
+</script> -->
